--- a/index.html
+++ b/index.html
@@ -11,16 +11,18 @@
         <h1>Mahjongg Tile Dealer (American)</h1>
     </header>
     <main>
-        <section id="controls">
+        <div id="controls">
             <button id="deal-13-btn">Deal 13 Tiles</button>
             <button id="deal-14-btn">Deal 14 Tiles</button>
-        </section>
-        <section id="hand-display-area">
+            <button id="sortSuitRankBtn">Sort: Suit/Rank</button>
+            <button id="sortRankSuitBtn">Sort: Rank/Suit</button>
+        </div>
+        <div id="hand-display-area">
             <h2>Your Hand:</h2>
             <div id="dealt-hand-container">
                 <!-- Dealt tiles will appear here -->
             </div>
-        </section>
+        </div>
     </main>
     <footer>
         <p>Mahjongg Tile Utility</p>
