feat: Implement remaining tiles, reset deck, and dynamic button states

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
             <button id="deal-14-btn">Deal 14 Tiles</button>
             <button id="sortSuitRankBtn">Sort: Suit/Rank</button>
             <button id="sortRankSuitBtn">Sort: Rank/Suit</button>
+            <button id="reset-deck-btn">Reset Deck</button>
+            <p id="remaining-tiles-p">Tiles remaining: -</p>
         </div>
         <div id="hand-display-area">
             <h2>Your Hand:</h2>
